src/org/elixir_lang/HEEx.bnf
{
  // CANNOT be called `Parser` because `
  parserClass="org.elixir_lang.heex.Parser"
  parserUtilClass="org.elixir_lang.heex.HEExParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="HEEx"
  psiImplClassSuffix="Impl"
  psiPackage="org.elixir_lang.heex.psi"
  psiImplPackage="org.elixir_lang.heex.psi.impl"

  elementTypeHolderClass="org.elixir_lang.heex.psi.Types"
  elementTypeClass="org.elixir_lang.heex.psi.ElementType"
  tokenTypeClass="org.elixir_lang.heex.psi.TokenType"

  // Types.java is maintained by hand; it also declares HEEX_OUTER_ELEMENT, an
  // OuterLanguageElementType that cannot be expressed here.
  tokens = [
    BRACE_CLOSING = "BRACE_CLOSING"
    BRACE_OPENING = "BRACE_OPENING"
    CLOSING = "%>"
    COMMENT = "Comment"
    COMMENT_MARKER = "#"
    DATA = "Data"
    EMPTY_MARKER = "Empty Marker"
    EQUALS_MARKER = "="
    ELIXIR = "Elixir"
    ESCAPED_OPENING = "<%%"
    FORWARD_SLASH_MARKER = "/"
    OPENING = "<%"
    PIPE_MARKER = "|"
  ]
}

private heexFile ::= (DATA | ESCAPED_OPENING | tag | braces)*
tag ::= OPENING (commentBody | elixirBody) CLOSING
        { pin = 1 }
braces ::= BRACE_OPENING EQUALS_MARKER ELIXIR BRACE_CLOSING

private commentBody ::= COMMENT_MARKER COMMENT?
                        { pin = 1 }
private elixirBody ::=  elixirMarker? ELIXIR?
private elixirMarker ::= EMPTY_MARKER | EQUALS_MARKER | FORWARD_SLASH_MARKER | PIPE_MARKER
